--- a/images.qrc
+++ b/images.qrc
@@ -2,5 +2,8 @@
     <qresource prefix="/logo"/>
     <qresource prefix="/">
         <file>resources/images/logo.png</file>
+        <file>resources/images/deadline.jpg</file>
+        <file>resources/images/rdr.jpg</file>
+        <file>resources/images/demoTexture.jpg</file>
     </qresource>
 </RCC>
