Добавлено:   - Направление взгляда игрока меняется в соответствии с его последним передвижением (влево/вправо)   - Добавлен, но не реализован список объектов для проверки коллизии с объектами
Изменения:
  - Передвижение игрока

--- a/textures.qrc
+++ b/textures.qrc
@@ -4,5 +4,6 @@
         <file>Textures/Ricardo.jpg</file>
         <file>Textures/Grass.jpg</file>
         <file>Textures/Stone.png</file>
+        <file>Textures/Mario.png</file>
     </qresource>
 </RCC>
