--- a/textures.qrc
+++ b/textures.qrc
@@ -5,5 +5,6 @@
         <file>Textures/Grass.jpg</file>
         <file>Textures/Stone.png</file>
         <file>Textures/Mario.png</file>
+        <file>Textures/deadinside.png</file>
     </qresource>
 </RCC>
