Изменения:   - Номера чанков, в которых находится игрок, просчитываются только при движении игрока.   - Коллизия между объектами и игроком проверяется только при движении игрока.   - Исправлена работа прыжка.

--- a/textures.qrc
+++ b/textures.qrc
@@ -1,10 +1,9 @@
 <RCC>
     <qresource prefix="/">
         <file>Textures/Blocks.jpg</file>
-        <file>Textures/Ricardo.jpg</file>
         <file>Textures/Grass.jpg</file>
         <file>Textures/Stone.png</file>
         <file>Textures/Mario.png</file>
-        <file>Textures/deadinside.png</file>
+        <file>Textures/NoTexture.png</file>
     </qresource>
 </RCC>
