--- a/textures.qrc
+++ b/textures.qrc
@@ -5,5 +5,6 @@
         <file>Textures/Stone.png</file>
         <file>Textures/Mario.png</file>
         <file>Textures/NoTexture.png</file>
+        <file>Textures/Tilesets/Environment.png</file>
     </qresource>
 </RCC>
